<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@drawable/background_login_480_800"
    tools:context="com.forst.miri.runwithme.activities.LoginActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="@dimen/size_of_circle_for_image_login_register"
        android:layout_height="@dimen/size_of_circle_for_image_login_register"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo512x512"
        app:civ_border_color="@color/colorLightPink"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/login_b_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">


        <com.forst.miri.runwithme.widges.EditTextCustomFont
            android:id="@+id/login_activity_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorTransparent"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/email_heb"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/between_views_margin"
            android:paddingLeft="@dimen/between_views_margin"
            android:paddingRight="@dimen/between_views_margin"
            android:paddingTop="@dimen/between_views_margin"
            android:textAppearance="@style/RegistrationBlackMainFont" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/between_views_margin"
            android:layout_marginRight="@dimen/between_views_margin"
            android:background="@color/colorLightGray"
            android:gravity="center" />


        <com.forst.miri.runwithme.widges.EditTextCustomFont
            android:id="@+id/login_activity_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorTransparent"
            android:ems="10"
            android:gravity="right"
            android:hint="@string/password_heb"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/between_views_margin"
            android:paddingLeft="@dimen/between_views_margin"
            android:paddingRight="@dimen/between_views_margin"
            android:paddingTop="@dimen/between_views_margin"
            android:textAppearance="@style/RegistrationBlackMainFont" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/between_views_margin"
            android:layout_marginRight="@dimen/between_views_margin"
            android:background="@color/colorLightGray"
            android:gravity="center" />

        <com.forst.miri.runwithme.widges.ButtonCustomFont
            android:id="@+id/login_activity_button_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/between_views_margin"
            android:layout_marginRight="@dimen/between_views_margin"
            android:layout_marginTop="@dimen/between_views_margin"
            android:background="@color/colorTransparent"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/colorDarkPink"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_b_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.forst.miri.runwithme.widges.ButtonCustomFont
            android:id="@+id/login_activity_button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/green_button_size_height"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/between_views_margin"
            android:layout_marginRight="@dimen/between_views_margin"
            android:background="@drawable/default_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/green_button_text_size" />

        <com.forst.miri.runwithme.widges.ButtonCustomFont
            android:id="@+id/login_activity_button_go_to_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/green_button_size_height"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/between_views_margin"
            android:layout_marginLeft="@dimen/between_views_margin"
            android:layout_marginRight="@dimen/margin_num_2"
            android:layout_marginTop="@dimen/between_views_margin"
            android:background="@drawable/default_button_stroke"
            android:text="@string/i_am_not_registered"
            android:textColor="@color/colorDefaultButtonColor"
            android:textSize="@dimen/green_button_text_size" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

